# obj-io

./: .gitignore  CMakeLists.txt  README.md  bash.exe.stackdump
examples/: CMakeLists.txt  index_group_example.cc  index_group_example.h  main.cc  polygon_example.cc  polygon_example.h  simple_example.cc  simple_example.h
include/thinks/: obj_io.h  obj_io.hpp  obj_io_mapper.h
include/thinks/obj_io/: __obj_io.h  obj_io.h  obj_io_mapper.h
test/: CMakeLists.txt  catch_main.cc  catch_mesh_matcher.h  catch_utils.h  common_channel_test.cc  main.cc  main.cpp  mapper_test.cc  mesh_types.h  normal_channel_test.cc  normals_test.cc  obj_io_test.cpp  position_channel_test.cc  positions_test.cc  read_test.cc  read_write_utils.h  round_trip_test.cc  tex_coord_channel_test.cc  tex_coords_test.cc  type_utils.h  types.h  utils.cc  utils.h  write_interleaved_test.cc  write_test.cc
test/utils/: catch_utils.h  read_write_utils.h  type_utils.h
